Fuuulll refactor of engine and plugin