@@ -8,28 +8,33 @@ import java.util.Set;
 import uz.duke.core.module.ModuleData;
 
 /**
- * The engine's own template, an INI {@code Object} block: every field the engine reads,
- * and none of a game's. A game whose things have more to say registers a block type of
- * its own with {@link ThingTemplateLoader#type}.
+ * The engine's own template, an {@code Object} block: every field the engine reads, and none
+ * of a game's. A game whose things have more to say reads blocks of its own records — see
+ * {@link ThingTemplateLoader#type}.
+ *
+ * <p>A block leaves out what a thing does not have: no {@code DisplayName} is its name, no
+ * shape is {@link Geometry#POINT}, which collides with nothing.
  */
-public record ObjectTemplate(String name, String displayName, Set<Kind> kinds, float visionRange,
-        Geometry geometry, List<ModuleEntry> modules) implements Solid, Sighted, Classified, Titled {
+public record ObjectTemplate(String name, String displayName, Set<Kind> kindOf, float visionRange,
+        Geometry geometry, List<ModuleData> modules) implements Solid, Sighted, Classified, Titled {
 
     public ObjectTemplate {
-        kinds = Set.copyOf(kinds);
-        modules = List.copyOf(modules);
+        displayName = displayName == null ? "" : displayName;
+        kindOf = kindOf == null ? Set.of() : Collections.unmodifiableSet(new LinkedHashSet<>(kindOf));
+        geometry = geometry == null ? Geometry.POINT : geometry;
+        modules = modules == null ? List.of() : List.copyOf(modules);
     }
 
     public static Builder named(String name) {
         return new Builder(name);
     }
 
-    /** For a template built in code; INI goes through {@link ThingTemplateLoader}. */
+    /** For a template built in code; a file goes through {@link ThingTemplateLoader}. */
     public static final class Builder {
         private final String name;
         private String displayName = "";
         private final Set<Kind> kinds = new LinkedHashSet<>();
-        private final List<ModuleEntry> modules = new ArrayList<>();
+        private final List<ModuleData> modules = new ArrayList<>();
         private float visionRange;
         private Geometry geometry = Geometry.POINT;
 
@@ -62,8 +67,8 @@ public record ObjectTemplate(String name, String displayName, Set<Kind> kinds, f
             return this;
         }
 
-        public Builder module(String tag, ModuleData data) {
-            modules.add(new ModuleEntry(tag, data));
+        public Builder module(ModuleData data) {
+            modules.add(data);
             return this;
         }
 
